--- a/Src/symbolsettingsection.ui
+++ b/Src/symbolsettingsection.ui
@@ -139,6 +139,9 @@
        <property name="checked">
         <bool>true</bool>
        </property>
+       <property name="tristate">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
     </layout>
