--- a/Src/widgetwelcome.ui
+++ b/Src/widgetwelcome.ui
@@ -19,7 +19,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0">
+  <layout class="QVBoxLayout" name="verticalLayout_2" stretch="3,1">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -39,7 +39,7 @@
     <number>0</number>
    </property>
    <item>
-    <layout class="QVBoxLayout" name="TextStuffLayout" stretch="0,0">
+    <layout class="QVBoxLayout" name="TextStuffLayout" stretch="2,8">
      <property name="spacing">
       <number>0</number>
      </property>
@@ -50,7 +50,7 @@
       <number>0</number>
      </property>
      <item>
-      <layout class="QHBoxLayout" name="WelcomeTitleLayout">
+      <layout class="QVBoxLayout" name="verticalLayout">
        <property name="spacing">
         <number>0</number>
        </property>
@@ -66,6 +66,32 @@
        <item>
         <widget class="QLabel" name="WelcomeTitle">
          <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>18</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="text">
+          <string>Welcome to Obenkyobo !</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
@@ -73,16 +99,17 @@
          </property>
          <property name="font">
           <font>
-           <pointsize>16</pointsize>
-           <weight>50</weight>
-           <bold>false</bold>
+           <pointsize>6</pointsize>
           </font>
          </property>
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
          <property name="text">
-          <string>Welcome to Obenkyobo !</string>
+          <string>v0.2.3</string>
          </property>
          <property name="alignment">
-          <set>Qt::AlignCenter</set>
+          <set>Qt::AlignHCenter|Qt::AlignTop</set>
          </property>
         </widget>
        </item>
@@ -111,11 +138,7 @@
           </sizepolicy>
          </property>
          <property name="text">
-          <string>  This application is designed to help you memorize kanas and numbers (soon™). Click &quot;Main&quot; to start learning.
-
-  The &quot;Edit *** set&quot; submenus will allow you to add/remove kanas from your MCQ and keep track of your progress by assigning to each a &quot;learning score&quot; from 0 to 5.
-
-  This application is very inspired by the android application Obenko, scan the QRCode to learn more about it.</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;  This application is designed to help you memorize kanas and numbers (soon™). Click &amp;quot;Main&amp;quot; to start learning.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;p&gt;  The &amp;quot;Edit *** set&amp;quot; submenus will allow you to add/remove kanas from your MCQ and keep track of your progress by assigning to each a &amp;quot;learning score&amp;quot; from 0 to 5.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;p&gt;  This application is very inspired by Obenkyo, scan the QRCode to learn more about it.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="wordWrap">
           <bool>true</bool>
