--- a/Src/popup.ui
+++ b/Src/popup.ui
@@ -14,8 +14,23 @@
    <string>Dialog</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>0</number>
+   </property>
    <property name="sizeConstraint">
-    <enum>QLayout::SetMinimumSize</enum>
+    <enum>QLayout::SetDefaultConstraint</enum>
+   </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
    </property>
    <item>
     <widget class="QLabel" name="message">
@@ -32,6 +47,9 @@
    </item>
    <item>
     <layout class="QHBoxLayout" name="OkButtonLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
      <item>
       <spacer name="OkButtonLeftSpacer">
        <property name="orientation">
