--- a/Src/Pages/AppSettingsPage.ui
+++ b/Src/Pages/AppSettingsPage.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>AppSettings</class>
- <widget class="QWidget" name="AppSettings">
+ <class>AppSettingsPage</class>
+ <widget class="QWidget" name="AppSettingsPage">
   <property name="geometry">
    <rect>
     <x>0</x>
