Connecting VocabExplorerPage's status checkboxes

--- a/Src/Pages/AppSettingsPage.ui
+++ b/Src/Pages/AppSettingsPage.ui
@@ -676,6 +676,26 @@
         <number>0</number>
        </property>
        <item>
+        <spacer name="horizontalSpacer_6">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="DisableVocabSheets">
+         <property name="text">
+          <string>Clear Vocab Sheets</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="horizontalSpacer_5">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -717,7 +737,7 @@
        <item>
         <widget class="QPushButton" name="resetPopup">
          <property name="text">
-          <string>Reset Help Popup</string>
+          <string>Reset Popups</string>
          </property>
         </widget>
        </item>
