--- a/Src/Pages/VocabularyDisplayPage.ui
+++ b/Src/Pages/VocabularyDisplayPage.ui
@@ -92,7 +92,7 @@
     </layout>
    </item>
    <item>
-    <layout class="QGridLayout" name="vocabGrid" rowminimumheight="0">
+    <layout class="QGridLayout" name="vocabGrid">
      <property name="sizeConstraint">
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
@@ -102,9 +102,6 @@
      <property name="verticalSpacing">
       <number>6</number>
      </property>
-     <item row="0" column="0">
-      <widget class="QPlainTextEdit" name="plainTextEdit"/>
-     </item>
     </layout>
    </item>
    <item>
