corrected VocabExplorer entries UI sizing, good enough for now

--- a/Src/Widgets/VocabFileEntryWidget.ui
+++ b/Src/Widgets/VocabFileEntryWidget.ui
@@ -19,9 +19,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="VocabularyCfgListEntryLayout" stretch="0,0,0">
+  <layout class="QHBoxLayout" name="VocabularyCfgListEntryLayout" stretch="86,7,7">
    <property name="spacing">
-    <number>20</number>
+    <number>10</number>
    </property>
    <property name="sizeConstraint">
     <enum>QLayout::SetMinimumSize</enum>
@@ -41,7 +41,7 @@
    <item>
     <widget class="QPushButton" name="TitleButton">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -78,8 +78,14 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
      <property name="text">
       <string>LS</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
