--- a/Src/Pages/QcmExercicePage.ui
+++ b/Src/Pages/QcmExercicePage.ui
@@ -291,7 +291,7 @@
      <item>
       <layout class="QGridLayout" name="EntriesGridLayout" rowstretch="0" columnstretch="0">
        <property name="sizeConstraint">
-        <enum>QLayout::SetMaximumSize</enum>
+        <enum>QLayout::SetDefaultConstraint</enum>
        </property>
        <property name="leftMargin">
         <number>0</number>
