--- a/Src/Widgets/QcmEntryGuess.ui
+++ b/Src/Widgets/QcmEntryGuess.ui
@@ -30,32 +30,26 @@
     <number>0</number>
    </property>
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <property name="spacing">
-      <number>6</number>
+    <widget class="QLabel" name="EntryGuess">
+     <property name="frameShape">
+      <enum>QFrame::Box</enum>
      </property>
-     <item>
-      <widget class="QPushButton" name="EntryGuess">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <family>DotGothic16</family>
-        </font>
-       </property>
-       <property name="text">
-        <string>あああaaa</string>
-       </property>
-       <property name="checkable">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-    </layout>
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+     <property name="textInteractionFlags">
+      <set>Qt::NoTextInteraction</set>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
