--- a/Src/Pages/QcmExercicePage.ui
+++ b/Src/Pages/QcmExercicePage.ui
@@ -230,7 +230,7 @@
     </layout>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="PlayLayout" stretch="3,9">
+    <layout class="QVBoxLayout" name="PlayLayout" stretch="1,1,1,1">
      <property name="spacing">
       <number>6</number>
      </property>
@@ -238,6 +238,9 @@
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <property name="topMargin">
+      <number>0</number>
+     </property>
+     <property name="bottomMargin">
       <number>0</number>
      </property>
      <item>
@@ -270,25 +273,108 @@
       </layout>
      </item>
      <item>
-      <layout class="QGridLayout" name="EntriesGridLayout" rowstretch="0" columnstretch="0">
-       <property name="sizeConstraint">
-        <enum>QLayout::SetDefaultConstraint</enum>
-       </property>
-       <property name="leftMargin">
-        <number>0</number>
-       </property>
+      <layout class="QHBoxLayout" name="GuessLine0" stretch="1,1,1">
        <property name="topMargin">
         <number>0</number>
        </property>
-       <property name="rightMargin">
-        <number>0</number>
-       </property>
+       <item>
+        <layout class="QVBoxLayout" name="Guess0">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+        </layout>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="Guess1">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+        </layout>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="Guess2">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+        </layout>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="GuessLine1" stretch="1,1,1">
        <property name="bottomMargin">
         <number>0</number>
        </property>
-       <property name="spacing">
-        <number>5</number>
+       <item>
+        <layout class="QVBoxLayout" name="Guess3">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+        </layout>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="Guess4">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+        </layout>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="Guess5">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+        </layout>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="GuessLine2" stretch="1,1,1">
+       <property name="bottomMargin">
+        <number>0</number>
        </property>
+       <item>
+        <layout class="QVBoxLayout" name="Guess6">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+        </layout>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="Guess7">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+        </layout>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="Guess8">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+        </layout>
+       </item>
       </layout>
      </item>
     </layout>
