ok let's fix size every fucking thing

--- a/Src/Pages/QcmExercicePage.ui
+++ b/Src/Pages/QcmExercicePage.ui
@@ -259,6 +259,9 @@
            <pointsize>25</pointsize>
           </font>
          </property>
+         <property name="frameShape">
+          <enum>QFrame::Box</enum>
+         </property>
          <property name="text">
           <string>azerty</string>
          </property>
