investigating on fnt size for switch button, fixed switch button not showing up at first, cleaning

--- a/Src/Pages/StatisticsPage.ui
+++ b/Src/Pages/StatisticsPage.ui
@@ -271,7 +271,7 @@
        <item>
         <widget class="QPushButton" name="ResetVocabSheets">
          <property name="text">
-          <string>Reset all Sheets</string>
+          <string>Reset all Sheets's LS</string>
          </property>
         </widget>
        </item>
