--- a/Src/Pages/QcmExercicePage.ui
+++ b/Src/Pages/QcmExercicePage.ui
@@ -14,6 +14,9 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout" stretch="1,9">
+   <property name="spacing">
+    <number>6</number>
+   </property>
    <item>
     <layout class="QHBoxLayout" name="ScoringHorizontalLayout" stretch="1,1">
      <property name="spacing">
