fixed Tools::GetFirmwareStr(), splited POPUP_FNT_RESIZE_ERROR_CNT into two for guesses and stem + reset both counter on new qcm, removed stem debug frame, added qcm feedback left & right margin, first pass on popup texts

--- a/Src/Pages/QcmExercicePage.ui
+++ b/Src/Pages/QcmExercicePage.ui
@@ -147,13 +147,13 @@
              <number>0</number>
             </property>
             <property name="leftMargin">
-             <number>0</number>
+             <number>9</number>
             </property>
             <property name="topMargin">
              <number>0</number>
             </property>
             <property name="rightMargin">
-             <number>0</number>
+             <number>9</number>
             </property>
             <property name="bottomMargin">
              <number>0</number>
@@ -296,7 +296,7 @@
           </font>
          </property>
          <property name="frameShape">
-          <enum>QFrame::Box</enum>
+          <enum>QFrame::NoFrame</enum>
          </property>
          <property name="text">
           <string>azerty</string>
